--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.2"
+    "mongodb": "^3.6.2",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
