--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
+    "node-fetch": "^2.6.1",
+    "node-schedule": "^1.3.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
